# zmtp_uv

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
src/: CMakeLists.txt  input_stream.c  input_stream.h  zmtp.c  zmtp.h  zmtp_greetings.c  zmtp_greetings.h
tests/: CMakeLists.txt  idle.cpp  main.cpp
tests/client/: CMakeLists.txt  main_client.c
tests/server/: CMakeLists.txt  main_server.c
tests/unit_tests/: CMakeLists.txt  main.cpp  tcp_echo.cpp  test_input_stream.cpp
uv/: CMakeLists.txt
